<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filter.ui.fragment.FiltrationIndustryFragment">

    <ImageView
        android:id="@+id/filtrationIndustryArrowBack"
        style="@style/arrow_back_iv_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filtrationIndustryHeaderTv"
        style="@style/header_tv_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_industry_choice"
        app:layout_constraintStart_toEndOf="@+id/filtrationIndustryArrowBack"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fl_filtration_industry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filtrationIndustryHeaderTv">

        <EditText
            android:id="@+id/et_filtration_industry"
            style="@style/search_et_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_industry" />

        <ImageButton
            android:id="@+id/btn_clear"
            style="@style/search_btn_clear_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/clear_search_text"
            android:src="@drawable/icon_search" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvIndustry"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_filtration_industry"
        tools:itemCount="1"
        tools:listitem="@layout/industry_item" />

    <FrameLayout
        android:id="@+id/get_list_error_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_60"
        android:visibility="gone">

        <TextView
            style="@style/get_list_error_placeholder_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/get_list_error"
            app:drawableTopCompat="@drawable/placeholder_error_region_carpet" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/incorrect_error_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_60"
        android:visibility="gone">

        <TextView
            style="@style/get_list_error_placeholder_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/incorrect_request_error"
            app:drawableTopCompat="@drawable/placeholder_error_cat" />
    </FrameLayout>

    <Button
        android:id="@+id/apply_button_industry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_60"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_24"
        android:backgroundTint="@color/blue"
        android:text="@string/select"
        android:textAppearance="@style/salary_filtration_edit_text"
        android:textColor="?attr/colorPrimary"
        app:cornerRadius="@dimen/margin_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
