<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".favorites.ui.FavoritesFragment">

    <TextView
        android:id="@+id/tv_header"
        style="@style/header_tv_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/header_tv_top_margin_18"
        android:text="@string/favorites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header" />

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorites"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="@dimen/header_tv_start_margin_16"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/vacancy_item" />

        <TextView
            android:id="@+id/placeholder_empty_list"
            style="@style/search_tv_medium_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/search_placeholder_drawable_padding_16"
            android:text="@string/favorites_empty"
            android:textAlignment="center"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/placeholder_favorites" />

        <TextView
            android:id="@+id/placeholder_got_empty_list_error"
            style="@style/search_tv_medium_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/search_placeholder_drawable_padding_16"
            android:text="@string/placeholder_favorites_error"
            android:textAlignment="center"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/placeholder_error_cat" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
